--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,33 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings =[
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
 ]
+
+# Optimizer settings
+optimizer = true
+optimizer_runs = 200
+via_ir = false
+
+# Gas reporting
+gas_reports = ["*"]
+gas_reports_ignore = ["test/**/*"]
+
+# Fuzz testing configuration
+fuzz = { runs = 256 }
+invariant = { runs = 256, depth = 15, fail_on_revert = true }
+
+# Network RPC endpoints
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+polygon = "${POLYGON_RPC_URL}"
+arbitrum = "${ARBITRUM_RPC_URL}"
+
+# Etherscan API keys for verification
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
+polygon = { key = "${POLYGONSCAN_API_KEY}", url = "https://api.polygonscan.com/api" }
+arbitrum = { key = "${ARBISCAN_API_KEY}", url = "https://api.arbiscan.io/api" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
